--- a/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/postgresscc.yaml
+++ b/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/postgresscc.yaml
@@ -20,6 +20,7 @@ metadata:
       but allows users to run with any non-root UID.  The user must specify the UID
       or it must be specified on the by the manifest of the container runtime.
   name: postgresnonroot
+  namespace: {{ .Release.Namespace }}
 priority: 10
 readOnlyRootFilesystem: false
 requiredDropCapabilities:
@@ -34,7 +35,7 @@ seLinuxContext:
 supplementalGroups:
   type: RunAsAny
 users:
-- system:serviceaccount:default:{{ .Values.serviceAccount.name }}
+- system:serviceaccount:{{ .Release.Namespace }}:{{ .Values.serviceAccount.name }}
 volumes:
 - configMap
 - downwardAPI
