--- a/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/deployment.yaml
+++ b/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: {{ template "postgresql.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "postgresql.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
