--- a/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/service-account.yaml
+++ b/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/service-account.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "postgresql.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
