--- a/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/svc.yaml
+++ b/kubernetes/charts/sdp-sonarqube/charts/postgresql/templates/svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "postgresql.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "postgresql.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
