--- a/kubernetes/charts/sdp-sonarqube/templates/copy-plugins.yaml
+++ b/kubernetes/charts/sdp-sonarqube/templates/copy-plugins.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "sonarqube.fullname" . }}-copy-plugins
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
