--- a/kubernetes/charts/sdp-sonarqube/templates/ingress.yaml
+++ b/kubernetes/charts/sdp-sonarqube/templates/ingress.yaml
@@ -5,6 +5,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: {{ template "sonarqube.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
