--- a/kubernetes/charts/sdp-sonarqube/templates/pvc.yaml
+++ b/kubernetes/charts/sdp-sonarqube/templates/pvc.yaml
@@ -3,6 +3,7 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ template "sonarqube.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
