--- a/kubernetes/charts/sdp-sonarqube/templates/sonarqube-config.yaml
+++ b/kubernetes/charts/sdp-sonarqube/templates/sonarqube-config.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "sonarqube.fullname" . }}-config
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ template "sonarqube.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
