--- a/kubernetes/charts/sdp-sonarqube/values.yaml
+++ b/kubernetes/charts/sdp-sonarqube/values.yaml
@@ -29,16 +29,16 @@ service:
   - 0.0.0.0/0
 
 route:
-  enabled: false
+  enabled: true
   labels: {}
   annotations: {}
-  path: "sonarqube.apps.cluster.sss.local"
+  path: "sonarqube-test.medusa.af.mil"
 
 
 ingress:
-  enabled: true
+  enabled: false
   hosts:
-    - name: sonar.sdp.com
+    - name: "sonarqube-test.medusa.af.mil"
       path: /
       # path: /sonarqube
   annotations: {}
@@ -99,3 +99,6 @@ postgresql:
     port: 5432
 
 podLabels: {}
+
+jenkins:
+  masterNamespace: iac-testing
